# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: Makefile  cli.py  game_logic.py  games_logic.py
brain_games/games/: brain_even.py  calc.py  even.py  game_calc.py  game_gcd.py  game_progression.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
